--- a/views/admin/home/sliderRevolution.ejs
+++ b/views/admin/home/sliderRevolution.ejs
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="subbutton1">
-                    <button type="submit">Submit</button>
+                    <button type="submit" class="submit">Submit</button>
                 </div>
             </form>
           
