--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="shortcut icon" href="images/home/classic-nee-tacademy-logo.png" type="image/x-icon"/>
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -279,7 +280,7 @@
 			</div>
 		</div>  -->
 
-        <div class="cardsDiv">
+        <!-- <div class="cardsDiv">
 			<div class="box1">
 					<img class="hexaimg" src="images/home/hexa1.png" alt="">
 					
@@ -303,25 +304,28 @@
 					
 			</div> 
 		
-		</div> 
+		</div>  -->
 
-        <!-- <div class="cardsDiv">
+        <div class="cardsDiv">
           <div class="box1">
-            <img class="hexaimg" src="images/home/jee.jp" alt="" />
-
+            <img class="hexaimg" src="images/home/jee.jpg" alt="" />
+			
             <h3 class="imgHeader">IIT-JEE</h3>
+			<a  class="read" href="/coursesJEE">Read More</a>
           </div>
           <div class="box2">
             <img class="hexaimg" src="images/home/iit &medical.jpg" alt="" />
 
-            <h3 class="imgHeader">IIT & Medical<br />Foundation</h3>
+            <h3 class="imgHeader">IIT & Medical Foundation</h3>
+			<a class="read" href="/coursesIIT&Medical">Read More</a>
           </div>
           <div class="box3">
             <img class="hexaimg" src="images/home/neet.jpg" alt="" />
-
+			
             <h3 class="imgHeader">NEET</h3>
+			<a class="read" href="/coursesNEET">Read More</a>
           </div>
-        </div> -->
+        </div>
       </section>
       <section class="drive">
         <div class="bottom-drive">
