--- a/views/coursesIIT&Medical.ejs
+++ b/views/coursesIIT&Medical.ejs
@@ -63,7 +63,7 @@
   </section>
   <section class="drive">
   <div class="bottom-drive">
-    <a href="/">Download Free Questions Bank for Neet 2021- Latest edition 2021</a>
+    <a href="/" target="_blank">Download Free Questions Bank for Neet 2021- Latest edition 2021</a>
   </div>
 </section>
 <%- include('./layout/footer') %>
