--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -104,7 +104,7 @@
 }
 .blob2 {
 	position: absolute;
-	
+
 	right: 3%;
 	top: 1%;
 }
@@ -212,18 +212,18 @@
 }
 
 .marqueetext {
-  font-family: 'Roboto', sans-serif;
-  display: flex;
-  flex-direction: row;
-  /* border: 2px solid black; */
-  /* box-shadow: 5px 5px 20px rgb(4 113 255 / 50%); */
-  border-radius: 20px;
-  padding: 18px;
-  background: #2b72e4;
-  color: white;
-  height: 100%;
-  font-size: 20px;
-  width: 100%;
+	font-family: 'Roboto', sans-serif;
+	display: flex;
+	flex-direction: row;
+	/* border: 2px solid black; */
+	/* box-shadow: 5px 5px 20px rgb(4 113 255 / 50%); */
+	border-radius: 20px;
+	padding: 18px;
+	background: #2b72e4;
+	color: white;
+	height: 100%;
+	font-size: 20px;
+	width: 100%;
 }
 
 .marqueetext a {
@@ -241,7 +241,7 @@
 	padding: 0 5rem;
 	/* background: url("../images/home/TopAir.png") center; */
 	background-size: 170%;
-  background-color: #F9FBFA;
+	background-color: #f9fbfa;
 }
 .hexa1 {
 	border: 1px solid #2b72e4;
@@ -257,7 +257,7 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: #F9FBFA;
+	background-color: #f9fbfa;
 	z-index: 1;
 }
 .CalanderEvents {
@@ -273,7 +273,7 @@
 }
 .calenderContent {
 	text-align: center;
-	
+
 	margin-left: auto;
 	margin-right: auto;
 	display: flex;
@@ -289,12 +289,11 @@
 	color: white;
 	height: 100%;
 	width: 20%;
-	padding: .85rem;
+	padding: 0.85rem;
 	border-radius: 20px 0px 20px 0px;
 	font-size: 22px;
-  text-align: center;
-  transition: .3s all ease-in-out;
-
+	text-align: center;
+	transition: 0.3s all ease-in-out;
 }
 p {
 	margin-bottom: 0rem !important;
@@ -321,7 +320,7 @@ p {
 	border-radius: 20px;
 	width: 30rem;
 	margin-top: 1rem;
-	transition: .3s all ease-in-out;
+	transition: 0.3s all ease-in-out;
 	/* border: 1px solid #1E2886; */
 }
 .calenderCard:hover {
@@ -329,8 +328,7 @@ p {
 	box-shadow: 2px 2px 60px rgba(4, 113, 255, 0.2);
 }
 .calenderCard:hover .date {
-	background:linear-gradient(90deg,#02c3d8,#0061FF);
-	
+	background: linear-gradient(90deg, #02c3d8, #0061ff);
 }
 
 .calandersvg {
@@ -372,16 +370,15 @@ p {
 	height: 65vh;
 }
 .sec-2 .div-2 {
-  position: relative;
-  
-  
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  
-  /* margin-bottom: 15rem; */
-  z-index: 5;
+	position: relative;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+
+	/* margin-bottom: 15rem; */
+	z-index: 5;
 }
 .sec-2 .div-1 {
 	position: relative;
@@ -390,18 +387,15 @@ p {
 	justify-content: flex-start;
 	display: flex; */
 	z-index: 5;
-  /* margin-bottom: 1.5rem; */
+	/* margin-bottom: 1.5rem; */
 	/* box-shadow: 5px 5px 20px rgba(4, 113, 255, 0.5); */
 	/* background-color: #1E2886; */
 	/* padding-left: 6rem; */
 }
 .sec-2 .div-1 h1 {
-  
-   margin-bottom: 3rem;
-   font-size: 25px;
-     /* margin-right: 10rem; */
-    
-
+	margin-bottom: 3rem;
+	font-size: 25px;
+	/* margin-right: 10rem; */
 }
 .section-2 .div-1 .calandersvg {
 	margin-top: 3rem;
@@ -494,23 +488,23 @@ p {
 	justify-content: center;
 }
 .building {
-  height: 100%;
-  width: 100%;
-  top: -15%;
-  position: absolute;
-  z-index: 5;
-  mix-blend-mode: soft-light;
-  left: -48%;
-  object-fit: cover;
+	height: 100%;
+	width: 100%;
+	top: -15%;
+	position: absolute;
+	z-index: 5;
+	mix-blend-mode: soft-light;
+	left: -48%;
+	object-fit: cover;
 }
 .building2 {
-  height: 23%;
-  width: 49%;
-  top: 3%;
-  position: absolute;
-  z-index: 5;
-  left: 52%;
-  opacity: .5;
+	height: 23%;
+	width: 49%;
+	top: 3%;
+	position: absolute;
+	z-index: 5;
+	left: 52%;
+	opacity: 0.5;
 }
 .building3 {
 	height: 23%;
@@ -519,7 +513,7 @@ p {
 	position: absolute;
 	z-index: 5;
 	left: 51%;
-  opacity: .5;
+	opacity: 0.5;
 }
 .cardsDiv {
 	position: relative;
@@ -528,8 +522,7 @@ p {
 	justify-content: space-evenly;
 	align-items: center;
 	height: 70vh;
-	width: 100% ;
-	
+	width: 100%;
 }
 /* .cardsDiv {
 	position: relative;
@@ -569,9 +562,8 @@ p {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	align-items: center; 
-	
-} 
+	align-items: center;
+}
 /* .box1 {
 	background: url('../images/home/jee.jpg') center/cover;
 }
@@ -584,7 +576,7 @@ p {
 .box2 h3,
 .box3 h3 {
 	font-size: 20px;
-	
+
 	z-index: 5;
 }
 /* .box1::after,
@@ -609,9 +601,10 @@ p {
 	width: 95%;
 	height: 70%;
 	transition: 0.5s all ease-in-out;
-	margin: .5rem;
+	margin: 0.5rem;
 	/* clip-path: circle(40%); */
-	transition: all .3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+	object-fit: cover;
 }
 /* .hexaimg:hover {
 	clip-path: circle(100%);
@@ -1124,125 +1117,116 @@ p {
   object-fit: cover;
 } */
 .topperCard {
-  /* background-color: slategray; */
-  height: 40vh;
-  display: flex;
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-top: 5rem;
-  
+	/* background-color: slategray; */
+	height: 40vh;
+	display: flex;
+	width: 90%;
+	margin-left: auto;
+	margin-right: auto;
+	position: relative;
+	justify-content: space-evenly;
+	align-items: center;
+	margin-top: 5rem;
 }
 .topper1 {
-  width: 40%;
-  height: 90%;
-  /* background-color: springgreen; */
-  display: flex;
-  box-shadow: 5px 5px 60px rgba(0, 0, 0, 0.2);
-  border-radius: 20px;
-  /* background-color: rgba(255, 255, 255, 0.445); */
-  /* background-color: white; */
-  background-color: rgba(255, 255, 255, 0.849);
+	width: 40%;
+	height: 90%;
+	/* background-color: springgreen; */
+	display: flex;
+	box-shadow: 5px 5px 60px rgba(0, 0, 0, 0.2);
+	border-radius: 20px;
+	/* background-color: rgba(255, 255, 255, 0.445); */
+	/* background-color: white; */
+	background-color: rgba(255, 255, 255, 0.849);
 }
 .topper2 {
-  width: 40%;
-  height: 90%;
-  /* background-color: rgb(142, 202, 172); */
-  display: flex;
-  box-shadow: 2px 2px 60px rgba(0, 0, 0, 0.2);
-  border-radius: 20px;
-  /* background-color: white; */
-  background-color: rgba(255, 255, 255, 0.849);
+	width: 40%;
+	height: 90%;
+	/* background-color: rgb(142, 202, 172); */
+	display: flex;
+	box-shadow: 2px 2px 60px rgba(0, 0, 0, 0.2);
+	border-radius: 20px;
+	/* background-color: white; */
+	background-color: rgba(255, 255, 255, 0.849);
 }
 .topperImg {
 	/* background-color:#A2D2FF; */
-  width: 50%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 20px 0px 0px 20px;
+	width: 50%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 20px 0px 0px 20px;
 }
 .topperImg2 {
 	/* background-color: rgba(255, 255, 255, 0.445); */
 	/* background-color:#A2D2FF; */
-  width: 50%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 20px 0px 0px 20px;
+	width: 50%;
+	height: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 20px 0px 0px 20px;
 }
 .topperImg img {
-  width: 80%;
-  height: 70%;
-  border-radius: 50%;
-  border: 5px solid black
-
+	width: 80%;
+	height: 70%;
+	border-radius: 50%;
+	border: 5px solid black;
 }
 .topperImg2 img {
-  width: 80%;
-  height: 70%;
-  border-radius: 50%;
-  border: 5px solid black
-
+	width: 80%;
+	height: 70%;
+	border-radius: 50%;
+	border: 5px solid black;
 }
 .topperContent {
-  /* background-color: rgb(177, 27, 177); */
-  width: 60%;
-  height: 100%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  
+	/* background-color: rgb(177, 27, 177); */
+	width: 60%;
+	height: 100%;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 .name {
-  font-size: 20px;
-  font-weight: 600;
-  /* margin-bottom: 1.5rem; */
+	font-size: 20px;
+	font-weight: 600;
+	/* margin-bottom: 1.5rem; */
 }
 .college {
 	font-size: 20px;
 	font-weight: 400;
-	margin-bottom: .5rem !important;
+	margin-bottom: 0.5rem !important;
 }
 .score {
-  font-size: 20px;
-  font-weight: 500;
+	font-size: 20px;
+	font-weight: 500;
 }
-.marks
-{
-  font-size: 20px;
-  font-weight: 600;
-  padding: .5rem 1rem;
-  border-radius: 20px;
-  background:linear-gradient(60deg,#02c3d8,#0061FF);
-  color: white;
-  
+.marks {
+	font-size: 20px;
+	font-weight: 600;
+	padding: 0.5rem 1rem;
+	border-radius: 20px;
+	background: linear-gradient(60deg, #02c3d8, #0061ff);
+	color: white;
 }
 .section-2 h1 {
-  font-size: 1.75rem;
+	font-size: 1.75rem;
 }
 .bgTopper {
-	background:linear-gradient(80deg,#60EFFF,#0061FF);
+	background: linear-gradient(80deg, #60efff, #0061ff);
 	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
 	height: 80vh;
-	border-radius:20px;
+	border-radius: 20px;
 	box-shadow: 5px 5px 100px rgba(0, 0, 0, 0.3);
 }
 .markFlex {
-	
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
-	
 }
 .sec-2 {
 	/* background-color: blanchedalmond; */
@@ -1252,21 +1236,20 @@ p {
 	justify-content: space-evenly;
 }
 .updates {
-
 }
 .social {
 	position: relative;
 	top: 50%;
 }
 .read {
-	background:linear-gradient(60deg,#02c3d8,#0061FF);
+	background: linear-gradient(60deg, #02c3d8, #0061ff);
 	color: white;
 	text-decoration: none;
 	border-radius: 20px;
-	padding: .5rem 1rem;
+	padding: 0.5rem 1rem;
 	margin-bottom: 1rem;
 }
 .read:hover {
-	background:black;
+	background: black;
 	color: white;
 }
