--- a/views/home.ejs
+++ b/views/home.ejs
@@ -331,7 +331,7 @@
         <div class="bottom-drive">
           <a
             href="https://drive.google.com/file/d/1AekSeStzaqDFCfLAH372bR1bwTOs7ky2/view?usp=sharing"
-            >Download Free Questions Bank for Neet 2021- Latest edition 2021</a
+            >Download Free Questions Bank for Neet 2021- <span class="latestEdition">Latest edition 2021</span></a
           >
         </div>
       </section>
