--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -196,6 +196,8 @@
 	-ms-flex-align: center;
 	-webkit-align-items: center;
 	align-items: center;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .background {
@@ -789,6 +791,7 @@ p {
 	position: absolute;
 	width: 20%;
 	z-index: -1;
+	display: none;
 }
 
 .neet-2020-toppers-a {
@@ -1101,6 +1104,8 @@ p {
 	text-align: center;
 	font-size: 18px;
 	background: #fff;
+	
+	margin-right: 33px !important;
 	/* Center slide text vertically */
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -1150,7 +1155,7 @@ p {
   border-radius: 20px;
   /* background-color: rgba(255, 255, 255, 0.445); */
   /* background-color: white; */
-  background-color: rgba(255, 255, 255, 0.849);
+  background-color: rgb(255, 255, 255);
 }
 .topper2 {
   width: 40%;
@@ -1160,7 +1165,7 @@ p {
   box-shadow: 2px 2px 60px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   /* background-color: white; */
-  background-color: rgba(255, 255, 255, 0.849);
+  background-color: rgb(255, 255, 255);
 }
 .topperImg {
 	/* background-color:#A2D2FF; */
@@ -1234,7 +1239,11 @@ p {
   font-size: 1.75rem;
 }
 .bgTopper {
-	background:linear-gradient(80deg,#60EFFF,#0061FF);
+	/* background:linear-gradient(80deg,#60EFFF,#0061FF); */
+	background: url('../images/dna.jpg') center;
+	background-repeat: no-repeat;
+	/* background-attachment: fixed; */
+	background-size: cover;
 	width: 90%;
 	margin-left: auto;
 	margin-right: auto;
@@ -1242,6 +1251,7 @@ p {
 	border-radius:20px;
 	box-shadow: 5px 5px 100px rgba(0, 0, 0, 0.3);
 }
+
 .markFlex {
 	
 	text-align: center;
