--- a/views/admin/home/latestUpdates.ejs
+++ b/views/admin/home/latestUpdates.ejs
@@ -1,71 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Admin</title>
-		<link rel="stylesheet" href="../../stylesheets/adminheader.css" />
-		<link rel="stylesheet" href="../../stylesheets/admin.css" />
-		<link rel="stylesheet" href="../../stylesheets/adminSideBar.css" />
-	</head>
-	<body>
-		<%- include('../../layout/adminheader') %> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin</title>
+    <link rel="stylesheet" href="../../stylesheets/adminheader.css" />
+    <link rel="stylesheet" href="../../stylesheets/admin.css" />
+    <link rel="stylesheet" href="../../stylesheets/adminSideBar.css" />
+  </head>
+  <body>
+    <%- include('../../layout/adminheader') %>
+
+    <section class="mainsection">
+      <div class="popupdiv">
+          <form action="/admin/latestupdates" method="post">
+            <input type="text" name="uploadlink" id="uploadlink" />
+            <button type="submit">submit</button>
+          </form>
+        </div>
+      <%-include('../../layout/adminSidebar') %>
+      <div class="Latestupdates">
         
-		<section class="mainsection">
-			<%-include('../../layout/adminSidebar') %>
-		<div class="Latestupdates">
-			<div class="popupdiv">
-				<input type="text" name="uploadlink" >
-			</div>
 
+        <h2>Latest updates</h2>
+        <form class="form" action="/admin/latestupdates?_method=DELETE" method="post">
+        <div class="grid2">
+          <div class="grid-item2 item1">
+            <p>Current Link</p>
+            <% link.forEach(i => { %>
+            <input type="text" id="linkinput" value="<%= i %>"  readonly/>
+            <% }) %>
+          </div>
 
+          <div class="grid-item2 item2">
+            <p>Updates</p>
+            <% link.forEach(ilink => { %>
+            <input
+              type="checkbox"
+              id="checkbox"
+              name="checkbox"
+              style="height: 20px; width: 20px"
+              value="<%= ilink %> "
+            />
+            <% }) %>
+          </div>
+        </div>
+        <div class="subbutton2">
+        <button type="submit" >Delete</button>
+        
+        </div>
+        </form>
+        <div class="subbutton3">
+          <div class="addToppers"><span>x</span></div>
+        <button type="submit" class="addButton">Add</button>
+        </div>
+      </div>
+    </section>
 
-			<h2>Latest updates</h2>
-			<div class="grid2">
-				<div class="grid-item2 item1">
-					<p>Current Link</p>
-					<input type="text" id="linkinput" value="">
-				</div>
-				
-				<div class="grid-item2 item2">
-					<p>Updates</p>
-					<input
-						type="checkbox"
-						id="checkbox"
-						name="checkbox"
-						required
-						style="height: 20px; width: 20px"
-					/>
-					<input
-						type="checkbox"
-						id="checkbox"
-						name="checkbox"
-						required
-						style="height: 20px; width: 20px"
-					/>
-					<input
-						type="checkbox"
-						id="checkbox"
-						name="checkbox"
-						required
-						style="height: 20px; width: 20px"
-					/>
-					<input
-						type="checkbox"
-						id="checkbox"
-						name="checkbox"
-						required
-						style="height: 20px; width: 20px"
-					/>
-				</div>
-			</div>
-			<div class="subbutton2">
-				<button type="button">Submit</button>
-			</div>
-		</div>
-		</section>
-
-		<script src="../../javascripts/adminPanel.js"></script>
-	</body>
+    <script src="../../javascripts/adminPanel.js"></script>
+  </body>
 </html>
