--- a/views/home.ejs
+++ b/views/home.ejs
@@ -198,7 +198,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="HexagonDiv">
+			<section class="HexagonDiv" id="courses">
 				<!-- <div class="left">
 			<div class="spilldiv">
 				<img class="spill " src="images/home/spill.png" alt="">
