--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1108,7 +1108,7 @@ p {
 .mySwiper1 {
 	width: 80% !important;
 	height: 40vh !important;
-	background-color: blue;
+	/* background-color: blue; */
 	margin-left: auto;
 	margin-right: auto;
 	
