--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -6,10 +6,10 @@
 	</div>
 	<ul class="navlinks">
 		<li class="">
-			<a class="even" href="/home"><b>Home</b></a>
+			<a class="even" href="/"><b>Home</b></a>
 		</li>
 		<li class="">
-			<a class="odd" href="/home#courses"><b>Courses</b></a>
+			<a class="odd" href="/#courses"><b>Courses</b></a>
 		</li>
 		<li class="">
 			<a class="even" href="/Aboutus"><b>About Us</b></a>
