--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -14,7 +14,7 @@
 }
 /* Swiper  */
 .swiper {
-	width: 86% !important;
+	width: 79% !important;
 	height: 70% !important;
 	display: flex;
 	justify-content: center;
@@ -1114,14 +1114,37 @@ p {
 	margin-right: auto;
 	
 }
+
+
+.swiper1 .swiper-slide {
+	width:400px !important;
+	border-radius: 10px 0px 10px 0px!important;
+}
+
+.arrownext1 {
+	color: rgb(255, 255, 255);
+	position: absolute;
+	top: 57.5%;
+	/* transform: translateY(-50%); */
+	right: 6% !important;
+}
+.arrowprev1 {
+	color: rgb(255, 255, 255);
+	position: absolute;
+	top: 57.5%;
+	/* transform: translateY(-50%); */
+	left: 6% !important;
+}
+
+
 .mySwiper1 .swiper-slide {
-	width: 100%;
+	width: 300px;
 	height: 90%;
 	text-align: center;
 	font-size: 18px;
 	background: rgb(255, 255, 255);
 	
-	margin-right: 34px !important;
+	/* margin-right: 124px !important; */
 	/* Center slide text vertically */
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -1186,13 +1209,13 @@ p {
   /* background-color: slategray; */
   height: 40vh;
   display: flex;
-  width: 90%;
+  width: 30vw;
   margin-left: auto;
   margin-right: auto;
   position: relative;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
   
 }
 .topper1 {
@@ -1231,7 +1254,7 @@ p {
 	/* background-color: rgba(255, 255, 255, 0.445); */
 	/* background-color:#A2D2FF; */
   width: 50%;
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1254,7 +1277,7 @@ p {
 }
 .topperContent {
   /* background-color: rgb(177, 27, 177); */
-  width: 60%;
+  width: 65%;
   height: 100%;
   text-align: center;
   display: flex;
@@ -1264,22 +1287,22 @@ p {
   
 }
 .name {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 600;
   /* margin-bottom: 1.5rem; */
 }
 .college {
-	font-size: 18px;
+	font-size: 15px;
 	font-weight: 500;
 	margin-bottom: .5rem !important;
 }
 .score {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
 }
 .marks
 {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 600;
   padding: .5rem 1rem;
   border-radius: 20px;
