--- a/views/home.ejs
+++ b/views/home.ejs
@@ -314,7 +314,7 @@
           <div class="swiper-wrapper">
 			  <% ourtoppers.forEach(topper => { %>
 				<div class="swiper-slide">
-					
+					<section class="topperCard">
 					<div class="topperImg2">
 						<img src="<%= topper.studentimg %>" alt="" />
 					</div>
@@ -325,13 +325,16 @@
 							<h4 class="score">Neet score</h4>
 							<p class="marks">644/720</p>
 						</div>
-					</div>   
+					</div>
+				</section>   
 				</div>
 			  <% }) %>
           </div>
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
+          
         </section>
+			<div class="swiper-button-next arrownext1"></div>
+          	<div class="swiper-button-prev arrowprev1"></div>
+		
 			</section>
       	<!-- <div class="topper2">
 						<div class="topperImg2">
