--- a/views/home.ejs
+++ b/views/home.ejs
@@ -443,9 +443,11 @@
 							</div>
 						</div>
 					<% }) %>
-				</div></div>
-				<div class="swiper-button-next"></div>
-				<div class="swiper-button-prev"></div>
+				</div>
+
+			</div>
+			<div class="swiper-button-next arrownext2"></div>
+			<div class="swiper-button-prev arrowprev2"></div>
 			</section>
 
 			<%- include('./layout/footer') %>
