--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1134,7 +1134,20 @@ p {
 	/* transform: translateY(-50%); */
 	left: 6% !important;
 }
-
+.arrownext2 {
+	color: #02c3d8;
+	position: absolute;
+	top: 80.5%;
+	/* transform: translateY(-50%); */
+	right: 3% !important;
+}
+.arrowprev2 {
+	color: #02c3d8;
+	position: absolute;
+	top: 80.5%;
+	/* transform: translateY(-50%); */
+	left: 3% !important;
+}
 
 .mySwiper1 .swiper-slide {
 	width: 300px;
