--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -39,7 +39,7 @@ nav {
   justify-content: space-around;
   list-style: none;
   left: 3%;
-  padding-top: 1rem;
+  padding-top: .5rem;
 }
 
 .navlinks {
