--- a/views/home.ejs
+++ b/views/home.ejs
@@ -252,7 +252,7 @@
 		
 		</div>  -->
 
-				<div class="cardsDiv">
+				<div class="cardsDiv" id="courses">
 					<div class="box1">
 						<img class="hexaimg" src="images/home/jee.jpg" alt="" />
 
@@ -303,7 +303,7 @@
 				</div>
 			</div>
 	</section> -->
-			<section class="bgTopper">
+			<section class="bgTopper" >
 				<div class="neet-2020-toppers">
 					<img src="images/home/Vector.svg" alt="SVG" />
 					<div class="neet-2020-toppers-a">
@@ -433,7 +433,7 @@
 							</p>
 						</span> -->
 								<iframe
-									
+									class="video"
 									src="<%= link %>"
 									title="YouTube video player"
 									frameborder="0"
