--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1102,25 +1102,44 @@ p {
 }
 .swiper1 {
 	height: 100vh !important;
-	width: 30vw !important;
-
+	width: 90vw !important;
 	overflow: hidden;
 	display: flex;
 	flex-direction: column;
 	/* justify-content: space-around !important; */
 }
 .mySwiper1 {
-	width: 90% !important;
-	height: 40vh !important;
+	width: 85% !important;
+	height: 60vh !important;
 
-	margin-left: auto;
-	margin-right: auto;
+	
+
+
 }
 
 
-.swiper1 .swiper-slide {
-	width:400px !important;
-	border-radius: 10px 0px 10px 0px!important;
+.mySwiper1 .swiper-slide {
+	width: 22.8rem !important;
+    height: 16rem !important;
+	padding: 20px;
+	text-align: center;
+	font-size: 18px;
+	background: #ffffffea;
+	border-radius: 30px 0 30px 0;
+	margin-right: 34px !important;
+	/* Center slide text vertically */
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
 }
 
 .arrownext1 {
@@ -1152,28 +1171,7 @@ p {
 	left: 3% !important;
 }
 
-.mySwiper1 .swiper-slide {
-	width: 300px;
-	height: 90%;
-	text-align: center;
-	font-size: 18px;
-	background: rgb(255, 255, 255);
-	
-	/* margin-right: 124px !important; */
-	/* Center slide text vertically */
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	-webkit-justify-content: center;
-	justify-content: center;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	-webkit-align-items: center;
-	align-items: center;
-}
+
 
 .mySwiper2 {
 	width: 85% !important;
@@ -1181,6 +1179,10 @@ p {
 }
 
 .mySwiper2 .swiper-wrapper {
+	width: 100%;
+	height: 100vh;
+}
+.mySwiper1 .swiper-wrapper {
 	width: 100%;
 	height: 100vh;
 }
@@ -1223,7 +1225,7 @@ p {
 } */
 .topperCard {
   /* background-color: slategray; */
-  height: 40vh;
+  height: 100%;
   display: flex;
   width: 30vw;
   margin-left: auto;
@@ -1300,7 +1302,7 @@ p {
   
 }
 .name {
-  font-size: 16px;
+	font-size: 14px;
   font-weight: 600;
   /* margin-bottom: 1.5rem; */
 }
