--- a/views/home.ejs
+++ b/views/home.ejs
@@ -361,7 +361,7 @@
 						<h3>Consecutive years of District first in Salem</h3>
 					</div>
 					<div class="stat3 stat">
-						<h1 class="counter" data-target="90">90%</h1>
+						<h1 class="" data-target="90">90%</h1>
 						<h3>Success rate in NEET</h3>
 					</div>
 					<div class="stat4 stat">
@@ -449,11 +449,11 @@
 			integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ"
 			crossorigin="anonymous"
 		></script>
-		<script src="javascripts/index.js"></script>
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 		<script src="javascripts/common.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="slick/slick.min.js"></script>
+		<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script type="text/javascript" src="slick/slick.min.js"></script>
+		<script src="javascripts/index.js"></script>
 	</body>
 </html>
